Use desktop toolbar icons in VR.

Previously, VR was using similar-looking icons to the desktop location
bar.  This CL switches to use the same icons.  As a result, the VR lock
icon no longer has a key-hole in it.

BUG=728175

Change-Id: I3c7af24303db28d5de5157ed6cf37c362d70cc88
Reviewed-on: https://chromium-review.googlesource.com/521322
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477120}
Former-commit-id: fabef214e234775f39979def43eaaa3d92ce6494